--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body.dark-mode {
 
 .sidebar-header {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 	margin-bottom: 20px;
 }
@@ -927,29 +927,71 @@ body.dark-mode .next-page {
 	mask-position: center;
 }
 
+.icon-collapsed {
+	display: none;
+}
+
+.sidebar.collapsed .icon {
+	display: none;
+}
+
+.sidebar.collapsed .icon-collapsed {
+	display: inline-block;
+}
+.none {
+	display: none;
+}
+.toggle-none {
+	display: none !important;
+}
 .icon.home {
 	mask-image: url("/assets/icon/home-icon.svg");
 }
+.icon.home-collapsed {
+	mask-image: url("/assets/icon/home-icon.svg");
+}
+
 .icon.events {
 	mask-image: url("/assets/icon/events-icon.svg");
+}
+.icon.events-collapsed {
+	mask-image: url("/assets/icon/collsped-icon.svg");
 }
 .icon.speakers {
 	mask-image: url("/assets/icon/speaker-icon.svg");
 }
+.icon.speakers-collapsed {
+	mask-image: url("assets/icon/collapsed-icon-2.svg");
+}
 .icon.reports {
 	mask-image: url("/assets/icon/report-icon.svg");
 }
+.icon.reports-collapsed {
+	mask-image: url("/assets/icon/calender-collapsed.svg");
+}
 .icon.notifications {
+	mask-image: url("/assets/icon/notification-icon.svg");
+}
+.icon.notifications-collapsed {
 	mask-image: url("/assets/icon/notification-icon.svg");
 }
 .icon.messages {
 	mask-image: url("/assets/icon/chat.svg");
 }
+.icon.messages-collapsed {
+	mask-image: url("/assets/icon/chat.svg");
+}
 .icon.settings {
+	mask-image: url("/assets/icon/settings.svg");
+}
+.icon.settings-collapsed {
 	mask-image: url("/assets/icon/settings.svg");
 }
 .icon.collapse {
 	mask-image: url("/assets/icon/collapse.svg");
+}
+.icon.expand-collapsed {
+	mask-image: url("/assets/icon/caret-open.svg");
 }
 .icon.arrow-up-right {
 	mask-image: url("/assets/icon/arrow-up-right.svg");
